--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -26,7 +26,7 @@
 % personal data
 \name{Semih}{Onay}
 %\title{Resumé title}                               % optional, remove / comment the line if not wanted
-\address{Başakşehir 5.Etap }{34480 İstanbul}{Başakşehir}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
+\address{Başakşehir 5.Etap İstinye Sitesi }{34480 İstanbul}{Başakşehir}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 \phone[mobile]{(0505)~615~93~91}                   % optional, remove / comment the line if not wanted
 \phone[fixed]{(0212)~487~03~45}                    % optional, remove / comment the line if not wanted
 %\phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
@@ -53,19 +53,15 @@
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
 \section{Education}
-\cventry{2017--2019}{İstanbul Uskudar University}{\textnormal {Institue of Health Sciences}}{}{\newline \textbf{Neuroscience (Masters Degree)}}{}  % arguments 3 to 6 can be left empty
+\cventry{2016--Present}{İstanbul Uskudar University}{\textnormal {Institue of Health Sciences}}{}{\newline \textbf{Neuroscience (Masters Degree)}}{}  % arguments 3 to 6 can be left empty
 \cventry{2011--2015}{İstanbul Bilgi University}{\textnormal {Faculty of Arts and Science}}{}{\newline \textbf{Computer Science (Bachelors Degree - English)}}{}  % arguments 3 to 6 can be left empty
 \cventry{2008--2011}{İstanbul Arel University}{\textnormal {Vocational School}}{}{\newline \textbf{Computer Programming (Vocational - Turkish)}}{}
 \cventry{2003--2006}{İstanbul Başakşehir Highschool}{}{}{}{}
 
 \section{Experience}
 \subsection{Professional}
-\cventry{September 2018 - Present}{\textnormal{\textit{Software Specialist II}}}{\textnormal{\textbf{Setrow}}}{}{}{\textbf{}
-	\begin{itemize}%
-		\item CMS Development
-		\item Developement of Drupal modules and services
-\end{itemize}}
-\cventry{April 2016 - Agust 2018}{\textnormal{\textit{Software Specialist}}}{\textnormal{\textbf{Setrow}}}{}{}{\textbf{}
+\cventry{September 2018 Present}{\textnormal{\textit{Software Development Specialist II}}}{\textnormal{\textbf{Etiya}}}{}{}{\textbf{}}
+\cventry{April 2016 - Agust 2018}{\textnormal{\textit{Software Development Specialist}}}{\textnormal{\textbf{Setrow}}}{}{}{\textbf{}
 \begin{itemize}%
 \item Full-Stack Development
 \item Improving existing services
@@ -81,7 +77,6 @@
 
 \pagebreak
 \section{Projects}
-\cvitemwithcomment{2018}{Etiya - fizz.ca  CMS}{CMS Development}
 \cvitemwithcomment{2018}{Setrow - Mobile App (On Hold)}{Mobile application for Setrow}
 \cvitemwithcomment{2018}{Setrow - Push Service Interface}{Setrow Push Service panel interface for managing customers and debugging}
 \cvitemwithcomment{2018}{Personal - Traffic Data Collector (On Development)}{Istanbul traffic density analysis platform. Collecting traffic data from various sources for real-time visualizing}
@@ -90,6 +85,9 @@
 \cvitemwithcomment{2017}{Setrow - Log Monitoring Application}{Streaming application logs over UDP to Node.js via socket.io}
 \cvitemwithcomment{2017}{Setrow - Facebook Marketing Integration}{Allows Setrow Customers to upload their segmented audience to Facebook for creating AD Audiences}
 \cvitemwithcomment{2016}{Setrow - Web Push Notification Service}{Push Notifications Service with RESTfull API for web sites. Supports Chrome,Firefox,Opera and Yandex.}
+\cvitemwithcomment{2016}{Personal - Location Tracking App}{iOS only location tracker for personal use}
+\cvitemwithcomment{2016}{Personal - Unreal Engine Pyhsics Experiments}{Experimenting game physics via Unreal Engine. Throwing objects, low gravity, mesh destruction}
+\cvitemwithcomment{2015}{Thesis}{Cognitive Robotics}
 
 \section{Language Proficiency}
 \cvitemwithcomment{\textbf{English}} {Advanced}{Writing,reading and speaking}
