--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,7 @@
 
 \section{Experience}
 \subsection{Professional}
-\cventry{September 2018 - Present}{\textnormal{\textit{Software Specialist II}}}{\textnormal{\textbf{Setrow}}}{}{}{\textbf{}
+\cventry{September 2018 - Present}{\textnormal{\textit{Software Specialist II}}}{\textnormal{\textbf{Etiya}}}{}{}{\textbf{}
 	\begin{itemize}%
 		\item CMS Development
 		\item Developement of Drupal modules and services
@@ -81,7 +81,7 @@
 
 \pagebreak
 \section{Projects}
-\cvitemwithcomment{2018}{Etiya - fizz.ca  CMS}{CMS Development}
+\cvitemwithcomment{2018}{Etiya - Videotron Canada Project}{CMS Development}
 \cvitemwithcomment{2018}{Setrow - Mobile App (On Hold)}{Mobile application for Setrow}
 \cvitemwithcomment{2018}{Setrow - Push Service Interface}{Setrow Push Service panel interface for managing customers and debugging}
 \cvitemwithcomment{2018}{Personal - Traffic Data Collector (On Development)}{Istanbul traffic density analysis platform. Collecting traffic data from various sources for real-time visualizing}
