--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@
 \cventry{September 2018 - Present}{\textnormal{\textit{Software Specialist II}}}{\textnormal{\textbf{Etiya}}}{}{}{\textbf{}
 	\begin{itemize}%
 		\item CMS Development
-		\item Developement of Drupal modules and services
+			\item Developement of Angular SpringBoot application
 \end{itemize}}
 \cventry{April 2016 - Agust 2018}{\textnormal{\textit{Software Specialist}}}{\textnormal{\textbf{Setrow}}}{}{}{\textbf{}
 \begin{itemize}%
@@ -81,9 +81,8 @@
 
 \pagebreak
 \section{Projects}
-\cvitemwithcomment{2018}{Etiya - Videotron Canada Project}{CMS Development}
-\cvitemwithcomment{2018}{Setrow - Mobile App (On Hold)}{Mobile application for Setrow}
-\cvitemwithcomment{2018}{Setrow - Push Service Interface}{Setrow Push Service panel interface for managing customers and debugging}
+\cvitemwithcomment{2019}{Etiya - Videotron Project}{Angular application development}
+\cvitemwithcomment{2018}{Etiya - Fizz.ca Project}{Drupal CMS and Angular SpringBoot App development}
 \cvitemwithcomment{2018}{Personal - Traffic Data Collector (On Development)}{Istanbul traffic density analysis platform. Collecting traffic data from various sources for real-time visualizing}
 \cvitemwithcomment{2018}{Personal - Spotify-Telegram Bot}{Detects change of given users playlist. Sends newest added track link as a message to Telegram Bot users}
 \cvitemwithcomment{2018}{Setrow - Mobile App Push Notification Service}{Push Notifications RESTfull API and sample application for demostration.iOS and Android platforms}
@@ -95,22 +94,21 @@
 \cvitemwithcomment{\textbf{English}} {Advanced}{Writing,reading and speaking}
 \pagebreak
 \section{Software Development Skills}
-\cvdoubleitem{\textbf{Programming Paradigms}}{Functional and Object Oriented}{Advanced}{}
+\cvdoubleitem{\textbf{Programming Paradigms}}{Functional,OO and Reactive}{Advanced}{}
 \cvdoubleitem{\textbf{Programming Languages}}{JavaScript,TypeScript,PHP}{Advanced}{}
 \cvdoubleitem{\textbf{Programming Languages}}{Java,Python}{Intermediate}{}
-\cvdoubleitem{\textbf{Programming Languages}}{Go,Swift,C++}{Intermediate}{}
-\cvdoubleitem{\textbf{Frameworks}}{Spring Boot}{Intermediate}{}
+\cvdoubleitem{\textbf{Programming Languages}}{Go,Swift,C++}{IBeginner}{}
+\cvdoubleitem{\textbf{Frameworks}}{Spring Boot}{Advanced}{}
 \cvdoubleitem{\textbf{Frameworks}}{Node.js,Express,socket.io,Lodash,ReactNative}{Advanced}{}
-\cvdoubleitem{\textbf{Web Frameworks}}{Angular 5,Backbone.js,Electron}{Advanced}{}
-\cvdoubleitem{\textbf{Databases}}{MySQL,mongoDB,Redis}{Advanced}{}
+\cvdoubleitem{\textbf{Web Frameworks}}{Angular 7, RxJs}{Advanced}{}
+\cvdoubleitem{\textbf{Databases}}{MySQL,postgreSQL,mongoDB,Redis}{Advanced}{}
 \cvdoubleitem{\textbf{Databases}}{CouchDB,rethinkDB}{Intermediate}{}
 \cvdoubleitem{\textbf{Testing Frameworks}}{JUnit,PHPUnit,Mocha,Karma.js}{Advanced}{}
-\cvdoubleitem{\textbf{Web Servers}}{nginx,lighttpd}{Advanced}{}
 \cvdoubleitem{\textbf{OS}}{Linux,macOS (Primary OS)}{Advanced}{}
-\cvdoubleitem{\textbf{Cloud Platforms}}{AWS,IBM Bluemix}{Beginner}{}
+\cvdoubleitem{\textbf{Cloud Platforms}}{IBM Bluemix}{Beginner}{}
 \cvdoubleitem{\textbf{Cloud Platforms}}{Firebase}{Advanced}{}
-\cvdoubleitem{\textbf{Software Tools}}{Git,Slack,Trello,Jenkins,JIRA,TeamCity,LaTeX}{Advanced}{}
-\cvdoubleitem{\textbf{Software Tools}}{RabbitMQ,Jenkins,PM2,EsLint,Gulp,ClosureCompiler}{Advanced}{}
+\cvdoubleitem{\textbf{Software Tools}}{Git,Slack,Trello,Jenkins,JIRA,InVision,LaTeX}{Advanced}{}
+\cvdoubleitem{\textbf{Software Tools}}{activeMQ,RabbitMQ,Jenkins,PM2,EsLint,Gulp,ClosureCompiler}{Advanced}{}
 \cvdoubleitem{\textbf{Software Toolkits}}{Yarn,NPM,Composer,Maven}{Advanced}{}
 \cvdoubleitem{\textbf{Software Toolkits}}{Docker}{Beginner}{}
 
