Update Skills and Experience descriptions

--- a/main.tex
+++ b/main.tex
@@ -56,34 +56,32 @@
 \cventry{2017--2019}{İstanbul Uskudar University}{\textnormal {Institue of Health Sciences}}{}{\newline \textbf{Neuroscience (Masters Degree)}}{}  % arguments 3 to 6 can be left empty
 \cventry{2011--2015}{İstanbul Bilgi University}{\textnormal {Faculty of Arts and Science}}{}{\newline \textbf{Computer Science (Bachelors Degree - English)}}{}  % arguments 3 to 6 can be left empty
 \cventry{2008--2011}{İstanbul Arel University}{\textnormal {Vocational School}}{}{\newline \textbf{Computer Programming (Vocational - Turkish)}}{}
-\cventry{2003--2006}{İstanbul Başakşehir Highschool}{}{}{}{}
 
 \section{Experience}
 \subsection{Professional}
 \cventry{September 2018 - Present}{\textnormal{\textit{Software Specialist II}}}{\textnormal{\textbf{Etiya}}}{}{}{\textbf{}
 	\begin{itemize}%
-		\item CMS Development
-			\item Developement of Angular SpringBoot application
+		\item Participating Code reviews as a reviewer
+		\item Angular-SpringBoot Application Development
+		\item Drupal CMS Development
 \end{itemize}}
 \cventry{April 2016 - Agust 2018}{\textnormal{\textit{Software Specialist}}}{\textnormal{\textbf{Setrow}}}{}{}{\textbf{}
 \begin{itemize}%
 \item Full-Stack Development
 \item Improving existing services
 \item Development of API's and Services
-\item Implementing new technologies to existing stack
+\item Implementing new technologies to existing stacks
 \end{itemize}}
-\cventry{July - Agust 2010}{\textnormal{\textit{Intern}}}{\textnormal{\textbf{Burla Makine Ticareti ve Yatırım A.Ş}}}{}{}{\textbf{IT Department}
-\begin{itemize}%
-	\item Provided solutions to common PC problems
-	\item Configuration of mail clients and mail server
-	\item Reporting incidents of mail servers
-\end{itemize}}
+
+\section{Memberships}
+\cvitemwithcomment{\textbf{ngTurkey}} {Istanbul}{Non-profit organization for supporting Angular development in Turkey}
+\pagebreak
 
 \pagebreak
 \section{Projects}
 \cvitemwithcomment{2019}{Etiya - Videotron Project}{Angular application development}
 \cvitemwithcomment{2018}{Etiya - Fizz.ca Project}{Drupal CMS and Angular SpringBoot App development}
-\cvitemwithcomment{2018}{Personal - Traffic Data Collector (On Development)}{Istanbul traffic density analysis platform. Collecting traffic data from various sources for real-time visualizing}
+\cvitemwithcomment{2018}{Personal - Traffic Data Collector (On Development)}{Istanbul traffic density analysis platform. Collecting traffic data from various sources for real-time visualization}
 \cvitemwithcomment{2018}{Personal - Spotify-Telegram Bot}{Detects change of given users playlist. Sends newest added track link as a message to Telegram Bot users}
 \cvitemwithcomment{2018}{Setrow - Mobile App Push Notification Service}{Push Notifications RESTfull API and sample application for demostration.iOS and Android platforms}
 \cvitemwithcomment{2017}{Setrow - Log Monitoring Application}{Streaming application logs over UDP to Node.js via socket.io}
@@ -97,20 +95,17 @@
 \cvdoubleitem{\textbf{Programming Paradigms}}{Functional,OO and Reactive}{Advanced}{}
 \cvdoubleitem{\textbf{Programming Languages}}{JavaScript,TypeScript,PHP}{Advanced}{}
 \cvdoubleitem{\textbf{Programming Languages}}{Java,Python}{Intermediate}{}
-\cvdoubleitem{\textbf{Programming Languages}}{Go,Swift,C++}{IBeginner}{}
-\cvdoubleitem{\textbf{Frameworks}}{Spring Boot}{Advanced}{}
-\cvdoubleitem{\textbf{Frameworks}}{Node.js,Express,socket.io,Lodash,ReactNative}{Advanced}{}
+\cvdoubleitem{\textbf{Frameworks}}{Spring Boot}{Intermediate}{}
+\cvdoubleitem{\textbf{Frameworks}}{Node.js,Express,socket.io}{Advanced}{}
 \cvdoubleitem{\textbf{Web Frameworks}}{Angular 7, RxJs}{Advanced}{}
 \cvdoubleitem{\textbf{Databases}}{MySQL,postgreSQL,mongoDB,Redis}{Advanced}{}
 \cvdoubleitem{\textbf{Databases}}{CouchDB,rethinkDB}{Intermediate}{}
-\cvdoubleitem{\textbf{Testing Frameworks}}{JUnit,PHPUnit,Mocha,Karma.js}{Advanced}{}
+\cvdoubleitem{\textbf{Testing Frameworks}}{JUnit,PHPUnit,Mocha,Jasmine,Karma.js}{Advanced}{}
 \cvdoubleitem{\textbf{OS}}{Linux,macOS (Primary OS)}{Advanced}{}
-\cvdoubleitem{\textbf{Cloud Platforms}}{IBM Bluemix}{Beginner}{}
 \cvdoubleitem{\textbf{Cloud Platforms}}{Firebase}{Advanced}{}
-\cvdoubleitem{\textbf{Software Tools}}{Git,Slack,Trello,Jenkins,JIRA,InVision,LaTeX}{Advanced}{}
+\cvdoubleitem{\textbf{Software Tools}}{Git,Gitlab,GitHub,BitBucket,Slack,Trello,Jenkins,JIRA,InVision,LaTeX}{Advanced}{}
 \cvdoubleitem{\textbf{Software Tools}}{activeMQ,RabbitMQ,Jenkins,PM2,EsLint,Gulp,ClosureCompiler}{Advanced}{}
-\cvdoubleitem{\textbf{Software Toolkits}}{Yarn,NPM,Composer,Maven}{Advanced}{}
-\cvdoubleitem{\textbf{Software Toolkits}}{Docker}{Beginner}{}
+\cvdoubleitem{\textbf{Software Toolkits}}{Docker,Yarn,NPM,Composer,Maven}{Advanced}{}
 
 \section{Interests}
 \cvitem{}{Game design,Video games,Raspberry Pi,DIY,Insturmental music,Philosophy,Psychology,Systems and Patterns}
@@ -120,7 +115,7 @@
 \cvdoubleitem{\textbf{Birth Place}}{Gölcük/Kocaeli}{}{}
 \cvdoubleitem{\textbf{Driving Licence}}{Class B}{}{}
 \cvdoubleitem{\textbf{Martial Status}}{Single}{}{}
-\cvdoubleitem{\textbf{Military Service}}{Postponed 31.12.2020}{}{}
+\cvdoubleitem{\textbf{Military Service}}{Postponed 21.09.2019}{}{}
 
 
 % Publications from a BibTeX file without multibib
