Update personal project description

--- a/main.tex
+++ b/main.tex
@@ -74,14 +74,14 @@
 \end{itemize}}
 
 \section{Memberships}
-\cvitemwithcomment{\textbf{ngTurkey}} {Istanbul}{Non-profit organization for supporting Angular development in Turkey}
+\cvitemwithcomment{\textbf{ngTurkey}} {Istanbul}{Founding member of Non-profit organization for supporting Angular apps development}
 \pagebreak
 
 \pagebreak
 \section{Projects}
 \cvitemwithcomment{2019}{Etiya - Videotron Project}{Angular application development}
 \cvitemwithcomment{2018}{Etiya - Fizz.ca Project}{Drupal CMS and Angular SpringBoot App development}
-\cvitemwithcomment{2018}{Personal - Traffic Data Collector (On Development)}{Istanbul traffic density analysis platform. Collecting traffic data from various sources for real-time visualization}
+\cvitemwithcomment{2019}{Personal - JirAux }{VisualStudio Code extension for self-hosted JIRA installations.}
 \cvitemwithcomment{2018}{Personal - Spotify-Telegram Bot}{Detects change of given users playlist. Sends newest added track link as a message to Telegram Bot users}
 \cvitemwithcomment{2018}{Setrow - Mobile App Push Notification Service}{Push Notifications RESTfull API and sample application for demostration.iOS and Android platforms}
 \cvitemwithcomment{2017}{Setrow - Log Monitoring Application}{Streaming application logs over UDP to Node.js via socket.io}
@@ -95,11 +95,11 @@
 \cvdoubleitem{\textbf{Programming Paradigms}}{Functional,OO and Reactive}{Advanced}{}
 \cvdoubleitem{\textbf{Programming Languages}}{JavaScript,TypeScript,PHP}{Advanced}{}
 \cvdoubleitem{\textbf{Programming Languages}}{Java,Python}{Intermediate}{}
-\cvdoubleitem{\textbf{Frameworks}}{Spring Boot}{Intermediate}{}
+\cvdoubleitem{\textbf{Frameworks}}{Spring Boot, NestJS}{Intermediate}{}
 \cvdoubleitem{\textbf{Frameworks}}{Node.js,Express,socket.io}{Advanced}{}
-\cvdoubleitem{\textbf{Web Frameworks}}{Angular 7, RxJs}{Advanced}{}
+\cvdoubleitem{\textbf{Web Frameworks}}{Angular 7, RxJs, NgXS, NgRx}{Advanced}{}
 \cvdoubleitem{\textbf{Databases}}{MySQL,postgreSQL,mongoDB,Redis}{Advanced}{}
-\cvdoubleitem{\textbf{Databases}}{CouchDB,rethinkDB}{Intermediate}{}
+\cvdoubleitem{\textbf{Databases}}{rethinkDB}{Intermediate}{}
 \cvdoubleitem{\textbf{Testing Frameworks}}{JUnit,PHPUnit,Mocha,Jasmine,Karma.js}{Advanced}{}
 \cvdoubleitem{\textbf{OS}}{Linux,macOS (Primary OS)}{Advanced}{}
 \cvdoubleitem{\textbf{Cloud Platforms}}{Firebase}{Advanced}{}
@@ -115,7 +115,7 @@
 \cvdoubleitem{\textbf{Birth Place}}{Gölcük/Kocaeli}{}{}
 \cvdoubleitem{\textbf{Driving Licence}}{Class B}{}{}
 \cvdoubleitem{\textbf{Martial Status}}{Single}{}{}
-\cvdoubleitem{\textbf{Military Service}}{Postponed 21.09.2019}{}{}
+\cvdoubleitem{\textbf{Military Service}}{Postponed for paid service 21.09.2019}{}{}
 
 
 % Publications from a BibTeX file without multibib
