--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,3 @@
-%% start of file `template.tex'.
 %% Copyright 2006-2013 Xavier Danaux (xdanaux@gmail.com).
 %
 % This work may be distributed and/or modified under the
@@ -6,35 +5,34 @@
 % available at http://www.latex-project.org/lppl/.
 
 
-\documentclass[11pt,a4paper,sans]{moderncv}        % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
+\documentclass[11pt,a4paper,sans]{moderncv}
 
 % moderncv themes
-\moderncvstyle{casual}                             % style options are 'casual' (default), 'classic', 'oldstyle' and 'banking'
-\moderncvcolor{blue}                               % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
+\moderncvstyle{casual}
+\moderncvcolor{blue}
 %\renewcommand{\familydefault}{\sfdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
 %\nopagenumbers{}                                  % uncomment to suppress automatic page numbering for CVs longer than one page
 
 % character encoding
-\usepackage[utf8]{inputenc}                       % if you are not using xelatex ou lualatex, replace by the encoding you are using
-%\usepackage{CJKutf8}                              % if you need to use CJK to typeset your resume in Chinese, Japanese or Korean
+\usepackage[utf8]{inputenc}
 
 % adjust the page margins
 \usepackage[scale=0.85]{geometry}
-%\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
-%\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
+%\setlength{\hintscolumnwidth}{3cm}
+%\setlength{\makecvtitlenamewidth}{10cm}
 
 % personal data
 \name{Semih}{Onay}
-%\title{Resumé title}                               % optional, remove / comment the line if not wanted
-\address{Başakşehir 5.Etap }{34480 İstanbul}{Başakşehir}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
-\phone[mobile]{(0505)~615~93~91}                   % optional, remove / comment the line if not wanted
-\phone[fixed]{(0212)~487~03~45}                    % optional, remove / comment the line if not wanted
-%\phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
-\email{semihonay@hotmail.com.tr}                               % optional, remove / comment the line if not wanted
-\homepage{github.com/Semyonic}                         % optional, remove / comment the line if not wanted
-%\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
-\photo[80pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
-%\quote{Some quote}                                 % optional, remove / comment the line if not wanted
+%\title{Resumé title}
+\address{Başakşehir 5.Etap }{34480 İstanbul}{Başakşehir}
+\phone[mobile]{(0505)~615~93~91}
+\phone[fixed]{(0212)~487~03~45}
+%\phone[fax]{+3~(456)~789~012}
+\email{semihonay@hotmail.com.tr}
+\homepage{github.com/Semyonic}
+%\extrainfo{additional information}
+\photo[80pt][0.4pt]{assets/picture}
+%\quote{Some quote}
 
 % to show numerical labels in the bibliography (default is to show no labels); only useful if you make citations in your resume
 %\makeatletter
@@ -49,8 +47,6 @@
 %            content
 %----------------------------------------------------------------------------------
 \begin{document}
-%\begin{CJK*}{UTF8}{gbsn}                          % to typeset your resume in Chinese using CJK
-%-----       resume       ---------------------------------------------------------
 \makecvtitle
 \section{Education}
 \cventry{2017--2019}{İstanbul Uskudar University}{\textnormal {Institue of Health Sciences}}{}{\newline \textbf{Neuroscience (Masters Degree)}}{}  % arguments 3 to 6 can be left empty
@@ -74,7 +70,7 @@
 \end{itemize}}
 
 \section{Memberships}
-\cvitemwithcomment{\textbf{ngTurkey}} {Istanbul}{Founding member of Non-profit organization for supporting Angular apps development}
+\cvitemwithcomment{\textbf{ngTurkey}} {Istanbul}{Founding member of Non-profit organization for supporting Angular app development}
 \pagebreak
 
 \pagebreak
@@ -122,8 +118,5 @@
 %  for numerical labels: \renewcommand{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}% CONSIDER MERGING WITH PREAMBLE PART
 %  to redefine the heading string ("Publications"): \renewcommand{\refname}{Articles}
 
-%\clearpage\end{CJK*}                              % if you are typesetting your resume in Chinese using CJK; the \clearpage is required for fancyhdr to work correctly with CJK, though it kills the page numbering by making \lastpage undefined
+
 \end{document}
-
-
-%% end of file `template.tex'.
