Experience and military status updated

--- a/main.tex
+++ b/main.tex
@@ -24,9 +24,8 @@
 % personal data
 \name{Semih}{Onay}
 %\title{Resumé title}
-\address{Başakşehir 5.Etap }{34480 İstanbul}{Başakşehir}
+\address{ Yeşilce Mah.}{34418 İstanbul}{Kağıthane}
 \phone[mobile]{(0505)~615~93~91}
-\phone[fixed]{(0212)~487~03~45}
 %\phone[fax]{+3~(456)~789~012}
 \email{semihonay@hotmail.com.tr}
 \homepage{github.com/Semyonic}
@@ -55,7 +54,11 @@
 
 \section{Experience}
 \subsection{Professional}
-\cventry{September 2018 - Present}{\textnormal{\textit{Software Specialist II}}}{\textnormal{\textbf{Etiya}}}{}{}{\textbf{}
+\cventry{August 2019 - Present}{\textnormal{\textit{Frontend Engineer}}}{\textnormal{\textbf{Betbull}}}{}{}{\textbf{}
+	\begin{itemize}%
+		\item React Web Application Development
+\end{itemize}}
+\cventry{September 2018 - August 2019}{\textnormal{\textit{Software Specialist II}}}{\textnormal{\textbf{Etiya}}}{}{}{\textbf{}
 	\begin{itemize}%
 		\item Participating Code reviews as a reviewer
 		\item Angular-SpringBoot Application Development
@@ -75,7 +78,8 @@
 
 \pagebreak
 \section{Projects}
-\cvitemwithcomment{2019}{Etiya - Videotron Project}{Angular application development}
+\cvitemwithcomment{2019}{Betbull - Web Application}{React application development}
+\cvitemwithcomment{2019}{Etiya - Videotron Project}{Angular 7 application development}
 \cvitemwithcomment{2018}{Etiya - Fizz.ca Project}{Drupal CMS and Angular SpringBoot App development}
 \cvitemwithcomment{2019}{Personal - JirAux }{VisualStudio Code extension for self-hosted JIRA installations.}
 \cvitemwithcomment{2018}{Personal - Spotify-Telegram Bot}{Detects change of given users playlist. Sends newest added track link as a message to Telegram Bot users}
@@ -89,19 +93,20 @@
 \pagebreak
 \section{Software Development Skills}
 \cvdoubleitem{\textbf{Programming Paradigms}}{Functional,OO and Reactive}{Advanced}{}
-\cvdoubleitem{\textbf{Programming Languages}}{JavaScript,TypeScript,PHP}{Advanced}{}
+\cvdoubleitem{\textbf{Programming Languages}}{JavaScript,TypeScript}{Advanced}{}
 \cvdoubleitem{\textbf{Programming Languages}}{Java,Python}{Intermediate}{}
 \cvdoubleitem{\textbf{Frameworks}}{Spring Boot, NestJS}{Intermediate}{}
 \cvdoubleitem{\textbf{Frameworks}}{Node.js,Express,socket.io}{Advanced}{}
 \cvdoubleitem{\textbf{Web Frameworks}}{Angular 7, RxJs, NgXS, NgRx}{Advanced}{}
+\cvdoubleitem{\textbf{Web Frameworks}}{React, Redux, Redux-Thunk}{Intermediate}{}
 \cvdoubleitem{\textbf{Databases}}{MySQL,postgreSQL,mongoDB,Redis}{Advanced}{}
 \cvdoubleitem{\textbf{Databases}}{rethinkDB}{Intermediate}{}
-\cvdoubleitem{\textbf{Testing Frameworks}}{JUnit,PHPUnit,Mocha,Jasmine,Karma.js}{Advanced}{}
+\cvdoubleitem{\textbf{Testing Frameworks}}{JUnit,Mocha,Jasmine,Karma.js}{Advanced}{}
 \cvdoubleitem{\textbf{OS}}{Linux,macOS (Primary OS)}{Advanced}{}
 \cvdoubleitem{\textbf{Cloud Platforms}}{Firebase}{Advanced}{}
 \cvdoubleitem{\textbf{Software Tools}}{Git,Gitlab,GitHub,BitBucket,Slack,Trello,Jenkins,JIRA,InVision,LaTeX}{Advanced}{}
-\cvdoubleitem{\textbf{Software Tools}}{activeMQ,RabbitMQ,Jenkins,PM2,EsLint,Gulp,ClosureCompiler}{Advanced}{}
-\cvdoubleitem{\textbf{Software Toolkits}}{Docker,Yarn,NPM,Composer,Maven}{Advanced}{}
+\cvdoubleitem{\textbf{Software Tools}}{RabbitMQ,Jenkins,PM2,EsLint,Gulp,ClosureCompiler}{Advanced}{}
+\cvdoubleitem{\textbf{Software Toolkits}}{Docker,Yarn,NPM,Maven}{Advanced}{}
 
 \section{Interests}
 \cvitem{}{Game design,Video games,Raspberry Pi,DIY,Insturmental music,Philosophy,Psychology,Systems and Patterns}
@@ -111,7 +116,7 @@
 \cvdoubleitem{\textbf{Birth Place}}{Gölcük/Kocaeli}{}{}
 \cvdoubleitem{\textbf{Driving Licence}}{Class B}{}{}
 \cvdoubleitem{\textbf{Martial Status}}{Single}{}{}
-\cvdoubleitem{\textbf{Military Service}}{Postponed for paid service 21.09.2019}{}{}
+\cvdoubleitem{\textbf{Military Service}}{Completed}{}{}
 
 
 % Publications from a BibTeX file without multibib
