--- a/SemihOnay-CV.tex
+++ b/SemihOnay-CV.tex
@@ -54,9 +54,15 @@
 
 \section{Experience}
 \subsection{Professional}
-\cventry{August 2019 - Present}{\textnormal{\textit{Frontend Engineer}}}{\textnormal{\textbf{Betbull}}}{}{}{\textbf{}
+\cventry{July 2020 - Present}{\textnormal{\textit{Backend Engineer}}}{\textnormal{\textbf{Vivoo}}}{}{}{\textbf{}
+	\begin{itemize}%
+		\item Migrating to microservices from monolith backend application
+		\item Designing of the backend and app infrastructure
+\end{itemize}}
+\cventry{August 2019 - July 2020}{\textnormal{\textit{Frontend Engineer}}}{\textnormal{\textbf{Betbull}}}{}{}{\textbf{}
 	\begin{itemize}%
 		\item React Web Application Development
+		\item Nodejs SSR Web App Development
 \end{itemize}}
 \cventry{September 2018 - August 2019}{\textnormal{\textit{Software Specialist II}}}{\textnormal{\textbf{Etiya}}}{}{}{\textbf{}
 	\begin{itemize}%
@@ -78,6 +84,7 @@
 
 \pagebreak
 \section{Projects}
+\cvitemwithcomment{2020}{Vivoo - Mobile App}{Backend and Infrastructure development}
 \cvitemwithcomment{2019}{Betbull - Web Application}{React application development}
 \cvitemwithcomment{2019}{Etiya - Videotron Project}{Angular 7 application development}
 \cvitemwithcomment{2018}{Etiya - Fizz.ca Project}{Drupal CMS and Angular SpringBoot App development}
@@ -94,28 +101,27 @@
 \section{Software Development Skills}
 \cvdoubleitem{\textbf{Programming Paradigms}}{Functional,OO and Reactive}{Advanced}{}
 \cvdoubleitem{\textbf{Programming Languages}}{JavaScript,TypeScript}{Advanced}{}
-\cvdoubleitem{\textbf{Programming Languages}}{Java,Python}{Intermediate}{}
-\cvdoubleitem{\textbf{Frameworks}}{Spring Boot, NestJS}{Intermediate}{}
+\cvdoubleitem{\textbf{Programming Languages}}{Python}{Intermediate}{}
+\cvdoubleitem{\textbf{Programming Languages}}{Java}{Advanced}{}
+\cvdoubleitem{\textbf{Frameworks}}{Spring Boot, NestJS}{Advanced}{}
 \cvdoubleitem{\textbf{Frameworks}}{Node.js,Express,socket.io}{Advanced}{}
 \cvdoubleitem{\textbf{Web Frameworks}}{Angular 7, RxJs, NgXS, NgRx}{Advanced}{}
-\cvdoubleitem{\textbf{Web Frameworks}}{React, Redux, Redux-Thunk}{Intermediate}{}
-\cvdoubleitem{\textbf{Databases}}{MySQL,postgreSQL,mongoDB,Redis}{Advanced}{}
-\cvdoubleitem{\textbf{Databases}}{rethinkDB}{Intermediate}{}
+\cvdoubleitem{\textbf{Web Frameworks}}{React, Redux, Redux-Thunk}{Advanced}{}
+\cvdoubleitem{\textbf{Databases}}{postgreSQL,mongoDB,Redis}{Advanced}{}
 \cvdoubleitem{\textbf{Testing Frameworks}}{JUnit,Mocha,Jasmine,Karma.js}{Advanced}{}
 \cvdoubleitem{\textbf{OS}}{Linux,macOS (Primary OS)}{Advanced}{}
-\cvdoubleitem{\textbf{Cloud Platforms}}{Firebase}{Advanced}{}
+\cvdoubleitem{\textbf{Cloud Platforms}}{Firebase,AWS}{Advanced}{}
 \cvdoubleitem{\textbf{Software Tools}}{Git,Gitlab,GitHub,BitBucket,Slack,Trello,Jenkins,JIRA,InVision,LaTeX}{Advanced}{}
 \cvdoubleitem{\textbf{Software Tools}}{RabbitMQ,Jenkins,PM2,EsLint,Gulp,ClosureCompiler}{Advanced}{}
 \cvdoubleitem{\textbf{Software Toolkits}}{Docker,Yarn,NPM,Maven}{Advanced}{}
+\cvdoubleitem{\textbf{Software Toolkits}}{Kubernetes}{Advanced}{}
 
 \section{Interests}
 \cvitem{}{Game design,Video games,Raspberry Pi,DIY,Insturmental music,Philosophy,Psychology,Systems and Patterns}
 
 \section{Personal}
 \cvdoubleitem{\textbf{Birth Date}}{08.02.1990}{}{}
-\cvdoubleitem{\textbf{Birth Place}}{Gölcük/Kocaeli}{}{}
 \cvdoubleitem{\textbf{Driving Licence}}{Class B}{}{}
-\cvdoubleitem{\textbf{Martial Status}}{Single}{}{}
 \cvdoubleitem{\textbf{Military Service}}{Completed}{}{}
 
 
