Experience section updated

--- a/SemihOnay-CV.tex
+++ b/SemihOnay-CV.tex
@@ -24,8 +24,6 @@
 % personal data
 \name{Semih}{Onay}
 %\title{Resumé title}
-\address{ Yeşilce Mah.}{34418 İstanbul}{Kağıthane}
-\phone[mobile]{(0505)~615~93~91}
 %\phone[fax]{+3~(456)~789~012}
 \email{semihonay@hotmail.com.tr}
 \homepage{github.com/Semyonic}
@@ -54,27 +52,26 @@
 
 \section{Experience}
 \subsection{Professional}
-\cventry{July 2020 - Present}{\textnormal{\textit{Backend Engineer}}}{\textnormal{\textbf{Vivoo}}}{}{}{\textbf{}
+\cventry{July 2020 - Present}{\textnormal{\textit{Senior Backend Developer}}}{\textnormal{\textbf{Vivoo}}}{}{}{\textbf{}
 	\begin{itemize}%
+		\item Optimization of the CI/CD pipelines
 		\item Migrating to microservices from monolith backend application
-		\item Designing of the backend and app infrastructure
+		\item Designing of the backend and app infrastructure on AWS with Kubernetes
 \end{itemize}}
-\cventry{August 2019 - July 2020}{\textnormal{\textit{Frontend Engineer}}}{\textnormal{\textbf{Betbull}}}{}{}{\textbf{}
+\cventry{August 2019 - July 2020}{\textnormal{\textit{Software Engineer}}}{\textnormal{\textbf{Betbull}}}{}{}{\textbf{}
 	\begin{itemize}%
 		\item React Web Application Development
 		\item Nodejs SSR Web App Development
 \end{itemize}}
 \cventry{September 2018 - August 2019}{\textnormal{\textit{Software Specialist II}}}{\textnormal{\textbf{Etiya}}}{}{}{\textbf{}
 	\begin{itemize}%
-		\item Participating Code reviews as a reviewer
-		\item Angular-SpringBoot Application Development
+		\item Angular - SpringBoot Application Development
 		\item Drupal CMS Development
 \end{itemize}}
-\cventry{April 2016 - Agust 2018}{\textnormal{\textit{Software Specialist}}}{\textnormal{\textbf{Setrow}}}{}{}{\textbf{}
+\cventry{April 2016 - August 2018}{\textnormal{\textit{Software Specialist}}}{\textnormal{\textbf{Setrow}}}{}{}{\textbf{}
 \begin{itemize}%
-\item Full-Stack Development
 \item Improving existing services
-\item Development of API's and Services
+\item Development of new API's and Services
 \item Implementing new technologies to existing stacks
 \end{itemize}}
 
@@ -85,8 +82,8 @@
 \pagebreak
 \section{Projects}
 \cvitemwithcomment{2020}{Vivoo - Mobile App}{Backend and Infrastructure development}
-\cvitemwithcomment{2019}{Betbull - Web Application}{React application development}
-\cvitemwithcomment{2019}{Etiya - Videotron Project}{Angular 7 application development}
+\cvitemwithcomment{2019}{Betbull - Web Application}{React Application development}
+\cvitemwithcomment{2019}{Etiya - Videotron Project}{Angular Web Application development}
 \cvitemwithcomment{2018}{Etiya - Fizz.ca Project}{Drupal CMS and Angular SpringBoot App development}
 \cvitemwithcomment{2019}{Personal - JirAux }{VisualStudio Code extension for self-hosted JIRA installations.}
 \cvitemwithcomment{2018}{Personal - Spotify-Telegram Bot}{Detects change of given users playlist. Sends newest added track link as a message to Telegram Bot users}
@@ -99,28 +96,22 @@
 \cvitemwithcomment{\textbf{English}} {Advanced}{Writing,reading and speaking}
 \pagebreak
 \section{Software Development Skills}
-\cvdoubleitem{\textbf{Programming Paradigms}}{Functional,OO and Reactive}{Advanced}{}
+\cvdoubleitem{\textbf{Programming Paradigms}}{Functional,Object Oriented and Reactive}{Advanced}{}
 \cvdoubleitem{\textbf{Programming Languages}}{JavaScript,TypeScript}{Advanced}{}
-\cvdoubleitem{\textbf{Programming Languages}}{Python}{Intermediate}{}
-\cvdoubleitem{\textbf{Programming Languages}}{Java}{Advanced}{}
-\cvdoubleitem{\textbf{Frameworks}}{Spring Boot, NestJS}{Advanced}{}
-\cvdoubleitem{\textbf{Frameworks}}{Node.js,Express,socket.io}{Advanced}{}
-\cvdoubleitem{\textbf{Web Frameworks}}{Angular 7, RxJs, NgXS, NgRx}{Advanced}{}
-\cvdoubleitem{\textbf{Web Frameworks}}{React, Redux, Redux-Thunk}{Advanced}{}
-\cvdoubleitem{\textbf{Databases}}{postgreSQL,mongoDB,Redis}{Advanced}{}
-\cvdoubleitem{\textbf{Testing Frameworks}}{JUnit,Mocha,Jasmine,Karma.js}{Advanced}{}
-\cvdoubleitem{\textbf{OS}}{Linux,macOS (Primary OS)}{Advanced}{}
-\cvdoubleitem{\textbf{Cloud Platforms}}{Firebase,AWS}{Advanced}{}
-\cvdoubleitem{\textbf{Software Tools}}{Git,Gitlab,GitHub,BitBucket,Slack,Trello,Jenkins,JIRA,InVision,LaTeX}{Advanced}{}
-\cvdoubleitem{\textbf{Software Tools}}{RabbitMQ,Jenkins,PM2,EsLint,Gulp,ClosureCompiler}{Advanced}{}
-\cvdoubleitem{\textbf{Software Toolkits}}{Docker,Yarn,NPM,Maven}{Advanced}{}
-\cvdoubleitem{\textbf{Software Toolkits}}{Kubernetes}{Advanced}{}
+\cvdoubleitem{\textbf{Programming Languages}}{Python,Java}{Intermediate}{}
+\cvdoubleitem{\textbf{Frameworks}}{Spring Boot,NestJS}{Advanced}{}
+\cvdoubleitem{\textbf{Web Frameworks}}{Angular,React}{Advanced}{}
+\cvdoubleitem{\textbf{Databases}}{postgreSQL,MongoDB,Redis}{Advanced}{}
+\cvdoubleitem{\textbf{Database ORM's}}{TypeORM,mongoose}{Advanced}{}
+\cvdoubleitem{\textbf{Testing Frameworks}}{Jest}{Advanced}{}
+\cvdoubleitem{\textbf{Cloud Platforms}}{AWS}{Advanced}{}
+\cvdoubleitem{\textbf{Software Tools}}{Gitlab,GitHub,JIRA,InVision,LaTeX}{Advanced}{}
+\cvdoubleitem{\textbf{Software Toolkits}}{ElasticSearch,Docker,Kubernetes,Istio,Flagger,Rancher}{Advanced}{}
 
 \section{Interests}
 \cvitem{}{Game design,Video games,Raspberry Pi,DIY,Insturmental music,Philosophy,Psychology,Systems and Patterns}
 
 \section{Personal}
-\cvdoubleitem{\textbf{Birth Date}}{08.02.1990}{}{}
 \cvdoubleitem{\textbf{Driving Licence}}{Class B}{}{}
 \cvdoubleitem{\textbf{Military Service}}{Completed}{}{}
 
